tests/compile/funcs/undefined_func.stderr
error: UndefinedFunctionError: function "undefined(...)" is undefined
 --> tests/compile/funcs/undefined_func.rs:4:25
  |
4 | compose_idents!(my_fn = undefined(foo), {
  |                         ^^^^^^^^^

error[E0425]: cannot find function `foo_baz` in this scope
  --> tests/compile/funcs/undefined_func.rs:11:16
   |
11 |     assert_eq!(foo_baz(), 42);
   |                ^^^^^^^ not found in this scope
